Implement `TypeElement.getRecordComponents`
https://docs.oracle.com/en/java/javase/17/docs/api/java.compiler/javax/lang/model/element/TypeElement.html#getRecordComponents()

See https://github.com/bazelbuild/bazel/issues/23246

Startblock:
  * unknown commit is submitted
PiperOrigin-RevId: 667702947